[package]
name = "study-rust-kanji"
version = "0.0.3"
edition = "2021"
description = "Rust program for Hanzi learning"
authors = ["suikan4github"]

[lib]
name = "study_rust_kanji"
path = "src/lib.rs"

[[bin]]
name = "study-rust-kanji"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
